[package]
name = "any-container"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true
description = "Type-erased container types for storing heterogeneous values behind a common interface."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["containers", "data-structures", "type-erasure", "collections"]

[dependencies]
