[package]
name = "metronomos-loom"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true
description = "A crate for building and managing dependency graphs using a directed acyclic graph (DAG) structure."
homepage.workspace = true
repository.workspace = true
readme = "README.md"
keywords = ["dependency-injection", "di", "graph", "dag", "containers"]

[dependencies]
daggy = "0.9"
itertools = "0.15"
