[package]
name = "metronomos"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
include.workspace = true
description = "Type-safe dependency injection (DI) lifecycle manager for Rust."
homepage.workspace = true
repository.workspace = true
keywords = ["dependency-injection", "di", "async", "lifecycle"]

[dependencies]
metronomos-pulse = { path = "../metronomos-pulse", version = "0.1.2" }
tracing = "0.1"
tokio = { version = "1.0", features = ["full"] }
futures = "0.3"
pin-project = "1.1"
